# game-wip-dontplay

./: Cargo.toml  README.md  apply.py  crash.patch  dep_graph.dot  dep_graph.txt  dep_graph1.dot  dep_graph1.txt  design.md  ideas.md  minimize-lints.sh  repro.sh  tiles.rs
design/: design.md  save.md
egui-inspect-derive/src/: lib.rs
egui/crates/egui/src/: lib.rs
egui_inspect/: Cargo.toml
egui_inspect/egui-inspect-derive/: Cargo.toml
egui_inspect/egui-inspect-derive/src/: lib.rs
egui_inspect/src/: lib.rs
egui_inspect/testbed/src/: main.rs
res-src/: tiles.ase
shaders/: lighting.glsl
src/: app.rs  bitmanip.rs  cmdline.rs  command.rs  debug.rs  game.rs  graphics.rs  input.rs  inventory.rs  main.rs  math.rs  player.rs  res.rs  stringfmt.rs  texture_atlas.rs  tiles.rs  world.rs  worldgen.rs
src/game/: player.rs
src/tiles/: tiledb_edit_ui.rs
src/world/: reg_chunk_existence.rs  serialization.rs
