[package]
name = "mantle-diver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
serde = { version = "1.0.160", features = ["derive"] }

[dependencies.egui-inspect]
git = "https://github.com/crumblingstatue/egui-inspect.git"

#[profile.dev]
#incremental = false # Buggy on latest rustc nightly, keeps ICEing

[profile.dev.package."*"]
opt-level = 2
