[package]
name = "mantle-diver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.egui-inspect]
path = "./egui_inspect"

#[profile.dev]
#incremental = false # Buggy on latest rustc nightly, keeps ICEing
